@@ -44,6 +44,7 @@ t/23-gcd.t
 t/24-bernfrac.t
 t/25-pi.t
 t/26-mersenne.t
+t/26-mod.t
 t/27-clusters.t
 t/50-factoring.t
 t/90-release-perlcritic.t
